--- a/haskell-ghc-8.0.2/Dockerfile
+++ b/haskell-ghc-8.0.2/Dockerfile
@@ -10,6 +10,8 @@ RUN apt-get -yq update && apt-get -yq --no-install-suggests --no-install-recomme
     liblzma-dev \
     libpq-dev \
     libyaml-dev \
+    locales \
+    openssh-client \
     pkg-config \
   && rm -rf /var/lib/apt/lists/*
 
