--- a/haskell-ghc-amazon-linux/Dockerfile
+++ b/haskell-ghc-amazon-linux/Dockerfile
@@ -7,11 +7,11 @@ RUN yum -y install tar xz perl gcc make gmp gmp-devel zlib zlib-devel pkgconfig 
 RUN mkdir -p /usr/src/ghc
 WORKDIR /usr/src/ghc
 
-ENV GHCVER="8.8.4"
-ENV GHC_TGZ="ghc-8.8.4-x86_64-fedora27-linux.tar.xz"
+ENV GHCVER="8.10.7"
+ENV GHC_TGZ="ghc-8.10.7-x86_64-fedora27-linux.tar.xz"
 
 RUN curl --silent -O https://downloads.haskell.org/~ghc/$GHCVER/$GHC_TGZ \
-  && echo "f32e37f8aa03e74bad533ae02f62dc27a4521e78199576af490888ba34b515db  $GHC_TGZ" | sha256sum -c - \
+  && echo "b6ed67049a23054a8042e65c9976d5e196e5ee4e83b29b2ee35c8a22ab1e5b73 $GHC_TGZ" | sha256sum -c - \
   && tar --strip-components=1 -xf $GHC_TGZ \
   && rm $GHC_TGZ \
   && ./configure --prefix=/opt/ghc \
@@ -23,8 +23,8 @@ RUN curl --silent -O https://downloads.haskell.org/~ghc/$GHCVER/$GHC_TGZ \
 RUN mkdir -p /usr/src/cabal
 WORKDIR /usr/src/cabal
 
-ENV CABAL_VERSION="3.2.0.0"
-ENV CABAL_TGZ="cabal-install-3.2.0.0-x86_64-unknown-linux.tar.xz"
+ENV CABAL_VERSION="3.4.1.0"
+ENV CABAL_TGZ="cabal-install-3.4.1.0-x86_64-linux.tar.xz"
 
 RUN curl --silent -O http://downloads.haskell.org/cabal/cabal-install-$CABAL_VERSION/$CABAL_TGZ \
   && tar -xf $CABAL_TGZ \
@@ -57,7 +57,7 @@ ENV LC_ALL=en_US.UTF-8
 
 RUN true \
     && cabal v2-update \
-    && cabal v2-install cabal-plan --constraint=cabal-plan==0.6.2.0 --constraint='cabal-plan +exe' --installdir=/root/.cabal/bin \
+    && cabal v2-install cabal-plan --constraint=cabal-plan==0.7.2.1 --constraint='cabal-plan +exe' --installdir=/root/.cabal/bin \
     && cp /root/.cabal/bin/$(readlink /root/.cabal/bin/cabal-plan) /root/cabal-plan \
     && rm -rf /root/.cabal /root/.ghc \
     && mkdir -p /root/.cabal/bin \
