--- a/.github/workflows/reusable.yaml
+++ b/.github/workflows/reusable.yaml
@@ -31,9 +31,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Compute tag
-        run: if [[ ${{ github.event_name }} = 'schedule' ]]; then echo "tag=weekly" >> $GITHUB_OUTPUT; else echo "tag=$(date +'%Y%m%d')" >> $GITHUB_OUTPUT; fi
-        id: tag
+      - name: Compute tags
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            futurice/base-images
+          tags: |
+            type=schedule,prefix=${{ inputs.context }}-,pattern=weekly
+            type=raw,prefix=${{ inputs.context }}-,value={{date 'YYYYMMDD'}}
 
       - name: Log in to docker hub
         uses: docker/login-action@v2
@@ -46,5 +52,5 @@ jobs:
         with:
           context: ${{ inputs.context }}
           platforms: ${{ inputs.platforms }}
-          tags: futurice/base-images:${{ inputs.context }}-${{ steps.tag.outputs.tag }}
+          tags: ${{ steps.meta.outputs.tags }}
           push: true
