--- a/.github/workflows/reusable.yaml
+++ b/.github/workflows/reusable.yaml
@@ -41,6 +41,9 @@ jobs:
             type=schedule,prefix=${{ inputs.context }}-,pattern=weekly
             type=raw,prefix=${{ inputs.context }}-,value={{date 'YYYYMMDD'}}
 
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Log in to docker hub
         uses: docker/login-action@v2
         with:
