--- a/.github/workflows/reusable.yaml
+++ b/.github/workflows/reusable.yaml
@@ -8,6 +8,10 @@ on:
       platforms:
         type: string
         required: true
+      runner_labels:
+        type: string
+        required: false
+        default: "['ubuntu-latest']"
     secrets:
       DOCKERHUB_USERNAME:
         required: true
@@ -21,7 +25,7 @@ permissions:
 jobs:
   publish:
     name: Build and Publish docker images
-    runs-on: ubuntu-latest
+    runs-on: ${{ fromJson(inputs.runner_labels) }}
 
     defaults:
       run:
