Update runner type

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,7 +26,7 @@ jobs:
     with:
       context: haskell-ghc-all
       platforms: linux/arm64,linux/amd64
-      runner_labels: "['self-hosted', 'futurice-jammy-16-core']"
+      runner_labels: "['self-hosted', 'futurice-jammy-64-GB']"
 
   aws:
     uses: ./.github/workflows/reusable.yaml
